--- a/themes/ink/layouts/partials/ccir/tradeline-summary-table.html
+++ b/themes/ink/layouts/partials/ccir/tradeline-summary-table.html
@@ -27,14 +27,14 @@
       <th rowspan="3" class="valign-top">HCA/<br/>CREDIT LIMIT</th>
       <th rowspan="3" class="valign-top">BALANCE</th>
       <th rowspan="3" class="valign-top">OVERDUE</th>
-      <th colspan="5" class="valign-top">DELINQUENCY<br/><span class="grey5 fw-regular" style="display: block;margin-top: 38px;">COUNT OF<br/>BREACH INSTANCES</span></th>
+      <th colspan="5" class="valign-top">DELINQUENCY<br/><span class="grey5 font-14-regular" style="display: block;margin-top: 38px;">COUNT OF<br/>BREACH INSTANCES</span></th>
       <th rowspan="4" class="valign-top">CREDIT<br>FACILITY<br>STATUS</th>
       <th rowspan="3" class="valign-top br-none">WRITTEn OFF/<br>SETTLED</th>
     </tr>
     <tr>
       <th rowspan="3" class="vertical-heading-parent"><span class="vertical-heading">RECENT DPD</span></th>
-      <th colspan="3" class="grey5 fw-regular vertical-heading-parent"><span class="vertical-heading">12 MTHS</span></th>
-      <th class="grey5 fw-regular vertical-heading-parent"><span class="vertical-heading">36 MTHS</span></th>
+      <th colspan="3" class="grey5 font-14-regular vertical-heading-parent"><span class="vertical-heading">12 MTHS</span></th>
+      <th class="grey5 font-14-regular vertical-heading-parent"><span class="vertical-heading">36 MTHS</span></th>
     </tr>
     <tr>
       <th rowspan="2" class="vertical-heading-parent"><span class="vertical-heading">1+ DPD</span><span class="dpd-tag yellow"></span></th>
