--- a/themes/ink/layouts/partials/halfcircle-score-graph.html
+++ b/themes/ink/layouts/partials/halfcircle-score-graph.html
@@ -139,7 +139,7 @@
                                         {{if .estimated_range}}
                                             <p class="td-title mb-10 mb-24">EstimateD ANNUAL Income Range</p>
                                             {{range .estimated_range}}
-                                                <p class="regular-text">{{.}}</p>
+                                                <p class="font-18-regular">{{.}}</p>
                                             {{end}}
                                         {{end}}
                                     </td>
