--- a/themes/ink/layouts/partials/table-title.html
+++ b/themes/ink/layouts/partials/table-title.html
@@ -6,7 +6,7 @@
         </td>
         {{if .refNo }}
         <td class="right-side refNo">
-            <p class="ref-no"><span class="title">reference number</span><span>{{ .refNo }}</span></p>
+            <p class="ref-no"><span class="title">reference number</span><span class="font-20-bold">{{ .refNo }}</span></p>
         </td>
         {{end}}
         {{if or .oldestTrade .recentTrade}}
