--- a/themes/ink/layouts/screens/page1.html
+++ b/themes/ink/layouts/screens/page1.html
@@ -17,7 +17,7 @@
 <table class="no-break">
     <tr>
         <td>
-            {{ partial "table-title" (dict "tableTitle" "ENQUIRY INPUT INFORMATION" "refNo" "5653AFG34") }}
+            {{ partial "table-title" (dict "tableTitle" "ENQUIRY INPUT INFORMATION" "refNo" "5653AFG34" "className" "regular") }}
             {{ partial "ccir/table-style1" (dict "tableData" .Site.Data.ccir.enquiry_input_info ) }}
         </td>
     </tr>
