--- a/themes/ink/layouts/screens/page3.html
+++ b/themes/ink/layouts/screens/page3.html
@@ -14,7 +14,7 @@
 <table class="no-break">
     <tr>
         <td>
-            {{ partial "table-title" (dict "tableTitle" "PRODUCT SUMMARY") }}
+            {{ partial "table-title" (dict "tableTitle" "PRODUCT SUMMARY" "className" "regular") }}
             {{ partial "ccir/product-summary-table" (dict "footNote" true) }}
             {{ partial "ccir/foot-note" (dict "note" "Dispute reported in one or two tradelines" "notations" .Site.Data.ccir.notations_ps "spacing" "20px") }}
         </td>
