--- a/themes/ink/static/scss/style.scss
+++ b/themes/ink/static/scss/style.scss
@@ -315,8 +315,8 @@ body {
 
   .list li {
     font-weight: 600;
-    font-size: 19px;
-    line-height: 34px;
+    font-size: 18px;
+    line-height: 26px;
     color: #2c2c2c;
     margin-bottom: 0px;
   }
@@ -2290,6 +2290,10 @@ $dark: #2C2C2C;
     @include fontStyle(18px, 24px, 400);
   }
 
+  &-regular {
+    @include fontStyle(18px, 24px, 600);
+  }
+
   &-bold {
     @include fontStyle(18px, 24px, 700);
   }
@@ -2379,7 +2383,8 @@ $dark: #2C2C2C;
   margin-bottom: 10px;
 
   .right-side.refNo {
-    width: 20%;
+    width: 22%;
+    text-align: right
   }
 }
 
@@ -2613,7 +2618,7 @@ $dark: #2C2C2C;
     }
 
     .title {
-      @include fontStyle(16px, 16px, 700);
+      @include fontStyle(18px, 18px, 700);
     }
 
     td {
