--- a/themes/ink/layouts/partials/ccir/tradeline-summary-table.html
+++ b/themes/ink/layouts/partials/ccir/tradeline-summary-table.html
@@ -55,7 +55,7 @@
       <td>Personal Loan</td>
       <td class="status-tag">NOT DISCLOSED <span class="tag active">ACTIVE</span></td>
       <td>22/07/18</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">1,00,000</td>
       <td class="text-right">0</td>
       <td class="text-right">0</td>
@@ -72,7 +72,7 @@
       <td>Credit Card</td>
       <td class="status-tag">NOT DISCLOSED <span class="tag active">ACTIVE</span></td>
       <td>05/06/18</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">42,000</td>
       <td class="text-right">2,596</td>
       <td class="text-right">250</td>
@@ -81,7 +81,7 @@
       <td>2</td>
       <td>0</td>
       <td>6</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">4.500</td>
     </tr>
     <tr>
@@ -89,7 +89,7 @@
       <td>Credit Card</td>
       <td class="status-tag">NOT DISCLOSED <span class="tag active">ACTIVE</span></td>
       <td>23/07/20</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">37,370</td>
       <td class="text-right">23,669</td>
       <td class="text-right">11,816</td>
@@ -98,15 +98,15 @@
       <td>2</td>
       <td>1</td>
       <td>6</td>
-      <td>-</td>
-      <td class="text-right">-</td>
+      <td class="grey6">-</td>
+      <td class="text-right grey6">-</td>
     </tr>
     <tr>
       <td>4</td>
       <td>Personal Loan</td>
       <td class="status-tag">NOT DISCLOSED <span class="tag active">ACTIVE</span></td>
       <td>22/07/17</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">32,000</td>
       <td class="text-right">5,000</td>
       <td class="text-right">4,000</td>
@@ -115,8 +115,8 @@
       <td>2</td>
       <td>1</td>
       <td>5</td>
-      <td>-</td>
-      <td class="text-right">-</td>
+      <td class="grey6">-</td>
+      <td class="text-right grey6">-</td>
     </tr>
     <tr>
       <td>5</td>
@@ -132,12 +132,12 @@
       <td>1</td>
       <td>0</td>
       <td>6</td>
-      <td>-</td>
-      <td class="text-right">-</td>
+      <td class="grey6">-</td>
+      <td class="text-right grey6">-</td>
     </tr>
     <tr>
       <td>6</td>
-      <td class="table-heading-small">Auto Loan<br/>(Personal)</td>
+      <td class="">Auto Loan<br/>(Personal)</td>
       <td class="status-tag">NOT DISCLOSED <span class="tag">INACTIVE</span></td>
       <td>05/09/22</td>
       <td>05/09/22</td>
@@ -149,15 +149,15 @@
       <td>2</td>
       <td>2</td>
       <td>7</td>
-      <td>-</td>
-      <td class="text-right">-</td>
+      <td class="grey6">-</td>
+      <td class="text-right grey6">-</td>
     </tr>
     <tr>
       <td>7</td>
       <td>JLG Group</td>
       <td class="status-tag">123456<span class="tag active">ACTIVE</span></td>
       <td>06/04/15</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">95,632</td>
       <td class="text-right">39,569</td>
       <td class="text-right">506</td>
@@ -171,10 +171,10 @@
     </tr>
     <tr>
       <td>8</td>
-      <td class="table-heading-small">JLG Individual</td>
+      <td class="">JLG Individual</td>
       <td class="status-tag">123456<span class="tag active">ACTIVE</span></td>
       <td>01/04/15</td>
-      <td>-</td>
+      <td class="grey6">-</td>
       <td class="text-right">70,867</td>
       <td class="text-right">0</td>
       <td class="text-right">0</td>
@@ -184,7 +184,7 @@
       <td>11</td>
       <td>15</td>
       <td>Closed</td>
-      <td class="text-right">-</td>
+      <td class="text-right grey6">-</td>
     </tr>
     <tr>
       <td>9</td>
@@ -218,7 +218,7 @@
       <td>11</td>
       <td>18</td>
       <td>Closed</td>
-      <td class="text-right">-</td>
+      <td class="text-right grey6">-</td>
     </tr>
     <tr>
       <td>TOTAL</td>
