Table Markup Fixes

--- a/themes/ink/layouts/partials/ccir/table-style1.html
+++ b/themes/ink/layouts/partials/ccir/table-style1.html
@@ -19,12 +19,14 @@
             <td>
               <table>
                 <tr>
-                  {{range $title, $content:= . }}
+                  {{range .td}}
                   <td>
-                    <p class="title">{{$title}}</p>
-                    <p class="content">
-                      {{safeHTML $content}}
-                    </p>
+                    {{range $title, $content:= . }}
+                      <p class="title">{{$title}}</p>
+                      <p class="content">
+                        {{safeHTML $content}}
+                      </p>
+                    {{end}}
                   </td>
                   {{end}}
                 </tr>
